Fix gulp css namespace, bg color so interlace simulates flickering and welcome text.

--- a/src/sass/UI/_text.scss
+++ b/src/sass/UI/_text.scss
@@ -7,7 +7,7 @@
 }
 
 .danger {
-  color: $red;
+  color: $danger;
   text-shadow: 0px 0px 5px $red;
 }
 
