--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,11 +2,14 @@
 $base: #98DFDF;
 $base-bright: #009EFF;
 $black: #010101;
+// $bg: #102D82;
+$bg: #30323A;
 $white: #f5f5f5;
-$red: red;
 $yellow: yellow;
+$red: red;
 
 
 // Behaviour
 
 $selection: #FF0065;
+$danger: #FF5D5D;
