--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@ body {
   font-size: 1.2rem;
   color: $base;
   text-shadow: 0px 0px 5px $base-bright;
-  background-color: $black;
+  background-color: $bg;
   /*background-image: url(images/shadow.jpg);*/
 }
 
